# ludum-dare-48

./: .gitignore  .project  Cargo.toml  Cross.toml  README.md  Web.toml  settings.gradle
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  bundle.yml
app/: build.gradle
assets/img/character/: diveNormal.aseprite  diveNormal.json  diveStroke.aseprite  diveStroke.json  diveStrokeCharge.json  stunned.json
assets/img/enemies/: jelly.aseprite  jelly.json  jellyAttack.json  octopus.aseprite  octopus.json  octopusSuck.aseprite  octopusSuck.json  pufferFish.aseprite  pufferFishAttack.json  pufferFishBigIdle.json  pufferFishExpand.json  pufferFishIdle.json  whirlpool.aseprite  whirlpool.json
assets/img/map/: cave.json  fish.aseprite  fish.json  fishIdle.aseprite  fishStill.json  shop.aseprite  transponder.json
assets/shaders/: pixel.fs  ripple.fs
assets/tileEditor/: game.js  index.html  main.js
assets/worlds/: mainworld.json
bundle/: .gitignore  create-releases.sh
bundle/linux/: Dockerfile  create-release.sh
bundle/wasm/: Dockerfile  create-release.sh  emcc.sh
bundle/windows/: create-release.sh
src/: gamecore.rs  items.rs  main.rs  pallette.rs  player.rs  resources.rs  world.rs
src/entities/: fish.rs  mod.rs
src/entities/enemy/: base.rs  jellyfish.rs  mod.rs  octopus.rs  pufferfish.rs  whirlpool.rs
src/lib/: mod.rs
src/lib/animation/: wrapper.rs
src/lib/audio/: wrapper.rs
src/logic/: gameend.rs  loadingscreen.rs  mainmenu.rs  mod.rs  pausemenu.rs  screen.rs  shopscreen.rs  winscreen.rs
(+23 files in other folders)
