[package]
name = "ludum-dare-48"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = ""

[dependencies]
raylib = { version = "3.5", git = "https://github.com/ewpratten/raylib-rs", branch = "master", features = [
    "with_serde"
] }
serialstudio = "0.1.0"
serde = "1.0.125"
serde_json = "1.0.64"
failure = "0.1.8"
parry2d = "0.4.0"
log = "0.4.14"
env_logger = "0.8.3"
nalgebra = "0.26.1"
tiled = "0.9.4"